--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start1": "cd test && node testProblem1.js",
+    "start2": "cd test && node testProblem2.js"
   },
   "author": "",
   "license": "ISC"
